--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,13 @@ publication_category:
   conferences:
     title: 'Conference'
 
+# Publication Category - The following the list of publication categories and their headings
+students_category:
+  master:
+    title: 'Maestria'
+  doctoral:
+    title: 'Doctorado'    
+
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
