--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ author:
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   books:
-    title: 'Libros / Capítulos'
+    title: 'Libros o capítulos'
   manuscripts:
     title: 'Artículos'    
   divulgacion:
