--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "labbioclim.github.io/bioclimat"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Lab_logo_png.png"
+  avatar           : "Lab_bolita_jpg.jpg"
   name             : "Laboratorio de Bioclimatología"
   pronouns         : # example: "she/her"  
   bio              : "Ecología / Biogeografía / Modelos de Nicho Ecológico"
